--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "rollup-plugin-commonjs": "^8.2.0",
     "rollup-plugin-copy": "^3.1.0",
     "rollup-plugin-copy-assets": "^2.0.1",
+    "rollup-plugin-iniparser": "github:loicdurand/rollup-plugin-iniparser",
     "rollup-plugin-livereload": "^0.6.0",
     "rollup-plugin-node-resolve": "^3.4.0",
     "rollup-plugin-sass": "^0.8.1",
     "rollup-plugin-serve": "^0.4.2",
+    "rollup-plugin-string": "^3.0.0",
     "rollup-plugin-uglify": "^2.0.1"
   },
   "dependencies": {
