--- a/package.json
+++ b/package.json
@@ -11,21 +11,22 @@
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
     "babel-plugin-external-helpers": "^6.22.0",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-plugin-transform-react-jsx": "^6.24.1",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1",
     "rollup": "^1.1.2",
     "rollup-plugin-babel": "^3.0.7",
     "rollup-plugin-commonjs": "^8.2.0",
     "rollup-plugin-copy": "^3.1.0",
-    "rollup-plugin-copy-assets": "^2.0.1",
     "rollup-plugin-iniparser": "github:loicdurand/rollup-plugin-iniparser",
-    "rollup-plugin-livereload": "^0.6.0",
-    "rollup-plugin-node-resolve": "^3.4.0",
-    "rollup-plugin-sass": "^0.8.1",
+    "rollup-plugin-livereload": "^1.0.4",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-sass": "^1.2.2",
     "rollup-plugin-serve": "^0.4.2",
-    "rollup-plugin-string": "^3.0.0",
-    "rollup-plugin-uglify": "^2.0.1"
+    "rollup-plugin-uglify": "^6.0.3"
   },
   "dependencies": {
     "@hyperapp/router": "^0.7.2",
